--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
 	background: url(../img/background-img.jpg);
- font-family: Hind, sans-serif;
+ font-family: "Gill Sans", sans-serif;
+  background-size: 100%;
 }
 .logo{
 	position: relative;
@@ -51,4 +52,167 @@ body{
 .f{
 	color: white;
 	font-size: 10px;
+}
+.second_past{
+	background: white;
+	width: 2150px;
+	height: 2150px;
+	margin-top: 300px;
+	margin-left: -50px;
+}
+.product_h3{
+	font-weight: bold;
+	font-size: 70px;
+	position: relative;
+	left: 700px;
+	top: 200px;
+	font-family: "Gill Sans", sans-serif;
+
+}
+.h3_text{
+	font-family: "Gill Sans", sans-serif;
+	position: relative;
+	left: 490px;
+	top: 200px;
+	font-size: 15px; 
+	color: #8a8a8a;
+}
+.h3_textabout{
+		font-family: "Gill Sans", sans-serif;
+	position: relative;
+	left: 250px;
+	top: 30px;
+	font-size: 15px; 
+	color: #8a8a8a;
+}
+.img01{
+	width: 400px;
+	height: 250px;
+	position: relative;
+	left: 200px;
+	top: 299px;
+}
+.block1{
+	width: 400px;
+}
+.img_text{
+	color: #8a8a8a;
+	font-size: 15px;
+	position: relative;
+	top: 350px;
+	left: 200px;
+}
+.workspace{
+	font-size: 30px;
+	color: #404040;
+	font-weight: bold;
+	position: relative;
+	left: 200px;
+	top: 630px;
+}
+.h3_text2{
+	font-family: "Gill Sans", sans-serif;
+	position: relative;
+	left: 30px;
+	top: -00px;
+	font-size: 15px; 
+	color: #8a8a8a;
+}
+.h3_text3{
+	font-family: "Gill Sans", sans-serif;
+	position: relative;
+	left: 200px;
+	top: 350px;
+	font-size: 25px; 
+	color: #8a8a8a;
+}
+.img02{
+	width: 400px;
+	height: 250px;
+	position: relative;
+	left: 200px;
+	top: 300px;
+}
+.block2{
+	width: 400px;
+	height: 500px;
+	position: relative;
+	left: 500px;
+	top: -480px;
+}
+.img_text2{
+	color: #8a8a8a;
+	font-size: 15px;
+	position: relative;
+	top: 350px;
+	left: 200px;
+}
+.minimalism{
+	font-size: 30px;
+	color: #404040;
+	font-weight: bold;
+	position: relative;
+	left: 700px;
+	top: 150px;
+}
+.h3_text5{
+	font-family: "Gill Sans", sans-serif;
+	position: relative;
+	left: 30px;
+	top: -00px;
+	font-size: 15px; 
+	color: #8a8a8a;
+}
+.h3_text4{
+	font-family: "Gill Sans", sans-serif;
+	position: relative;
+	left: 200px;
+	top: 350px;
+	font-size: 25px; 
+	color: #8a8a8a;
+}
+.block3{
+	width: 400px;
+	height: 500px;
+	position: relative;
+	left: 1000px;
+	top: -1078px;
+}
+.img03{
+	width: 400px;
+	height: 250px;
+	position: relative;
+	left: 200px;
+	top: 300px;
+}
+.img_text3{
+	color: #8a8a8a;
+	font-size: 15px;
+	position: relative;
+	top: 350px;
+	left: 200px;
+}
+.cleantstyle{
+	font-size: 30px;
+	color: #404040;
+	font-weight: bold;
+	position: relative;
+	left: 1200px;
+	top: -440px;
+}
+.h3_text6{
+	font-family: "Gill Sans", sans-serif;
+	position: relative;
+	left: 30px;
+	top: -00px;
+	font-size: 15px; 
+	color: #8a8a8a;
+}
+.h3_text7{
+	font-family: "Gill Sans", sans-serif;
+	position: relative;
+	left: 200px;
+	top: 350px;
+	font-size: 25px; 
+	color: #8a8a8a;
 }
