--- a/css/style.css
+++ b/css/style.css
@@ -391,3 +391,135 @@ body{
 	z-index: 1;
 	transition: 2s;
 }
+.card_started{
+	width: 450px;
+	height: 680px;
+	background: white;
+	position: relative;
+	left: 200px;
+	top: 120px;
+}
+.cards{
+	width: 2000px;
+	height: 1000px;
+	background: #f7f7f7;
+	margin-top: -400px;
+}
+.card_img1{
+	margin-left: 50px;
+	margin-top: 100px;
+	width: 48px;
+	height: 48px;
+}
+.starter_kit{
+		font-family: "Gill Sans", sans-serif;
+		font-size: 40px;
+		color: #5e5e5e;
+		padding: 0 50px;
+}
+.price{
+	font-size: 20px;
+	color: #b0b0b0;
+}
+.started_kit_diskription{
+		padding: 0 50px;
+		color: #b0b0b0;
+}
+.card_levels{
+	color: grey;
+	font-size: 15px;
+	padding: 0 50px;
+	word-spacing: 5px;
+}
+.button{
+	position: relative;
+	color: #7c9c89;
+	display: inline-block;
+	text-decoration: none;
+	font-size: 24px;
+	font-family: Consolas;
+	letter-spacing: 4px;
+overflow: hidden;
+	padding: 15px 30px;
+	margin-left: 70px;
+	margin-top: 40px;
+	transition: 0.2s;
+}
+.button__line{
+	position: absolute;
+	display: block;
+}
+.button__line--top{
+	top: 0;
+	left: -100%;
+	width: 100%;
+	height: 2px;
+	background: linear-gradient(90deg, transparent, #7c9c89);
+
+}
+.button:hover .button__line--top {
+	left: 100%;
+	transition: 1s;
+	transition-delay: 0.25s;
+}
+.button__line--bottom{
+	bottom: 0;
+	right: -100%;
+	width: 100%;
+	height: 2px;
+	background: linear-gradient(270deg, transparent, #7c9c89);
+
+}
+.button:hover .button__line--bottom {
+	right: 100%;
+	transition: 1s;
+	transition-delay: 0.25s;
+}
+.button__line--left{
+	bottom: -100%;
+	left: 0;
+	width: 2px;
+	height: 100%;
+	background: linear-gradient(0deg, transparent, #7c9c89);
+
+}
+.button:hover .button__line--left {
+	bottom: 100%;
+	transition: 1s;
+	transition-delay: 0.25s;
+}
+.button__line--right{
+	top: -100%;
+	right: 0;
+	width: 2px;
+	height: 100%;
+	background: linear-gradient(180deg, transparent, #7c9c89);
+
+}
+.button:hover .button__line--right{
+	top: 100%;
+	transition: 1s;
+	transition-delay: 0.25s;
+}
+.button:hover{
+	box-shadow: 0 0 40px #71d18c;
+	background-color: #7c9c89;
+	color: white;
+	transition-delay: 1s;
+}
+.card_started2{
+	width: 450px;
+	height: 680px;
+	background: white;
+	position: relative;
+	left: 655px;
+	top: -560px;
+}
+.card_started3{
+	width: 450px;
+	height: 680px;
+	background: white;
+	position: relative;
+	left: 1110px;
+	top: -1240px;
+}
