--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,27 @@
 body{
+	font-family: 'Roboto', sans-serif;
+	font-weight: bold;
+}
+.bottom{
+	 background: #FFB800;
+	width: 150px;
+	height: 40px;
+	line-height: 40px;
+	border-radius: 10px;
+}
+.advices{
+	text-align: center;
+	color: white;
 	font-family: arial;
+	font-size: 20px;
+}
+.active{
+	width: 120px;
+	height: 50px;
+	position: relative;
+	left: 375px;
+	top: 10px;
+	z-index: 1;
 }
 .countainer{
 	width: 1316px;
@@ -47,7 +69,7 @@ body{
 	font-weight: bold;
 	position: relative;
 	top: 40px; 
-	left: 40px;
+	left: 10px;
 }
 .paris{
 	margin-left: 350px;
@@ -63,12 +85,12 @@ body{
 	font-family: arial;
 	font-size: 40px;
 	position: relative;
-	left: 800px;
+	left: 730px;
 }
 .block{
 	width: 300px;
 	height: 10px;
-	background: #3984F3;
+	background: #FFB800;
 	margin-left: 750px;
 	margin-top: 70px;
 }
@@ -76,108 +98,102 @@ body{
 	text-align: center;
 	font-family: arial;
 	width: 600px;
-	margin-left:590px;
+	margin-left: 590px;
 	font-size: 20px;
 }
-.text1{
-	text-align: center;
-	font-family: arial;
-	width: 700px;
-	margin-left:590px;
-	font-size: 20px;
-}
-.b2{
-	font-family: arial;
-	font-size: 40px;
+.checkbox1{
+	width: 430px;
+	height: 800px;
 	position: relative;
-	left: 630px;
+	left: -350px;
+	top: -20px;
 }
-.text2{
-	text-align: center;
-	font-family: arial;
+.checklist{
 	width: 300px;
-	margin-top: 20px;
-	margin-left: 790px;
-	font-size: 15px;
-}
-.block2{
-	width: 100px;
-	height: 10px;
-	background: #3984F3;
-	margin-left: 890px;
-	margin-top: -250px;
-}
-.b3{
-	font-family: arial;
-	font-size: 35px;
-	width: 300px; 
-	font-weight: bold;
+	color: #616161;
+	line-height: 40px;
+	list-style-image: url(../img/square.png);
+	text-align: left;
 	position: relative;
-	left: 825px;
-	top: -275px;
+	top: -770px;
+	left: -300px;
 }
-.sircle{
+.main{
+	display: flex;
+	margin-left: 50PX;
+}
+.checkbox2{
+	width: 330px;
+	height: 600px;
 	position: relative;
-	top: 250px;
-	left: 690px;
-	z-index: -1;
+	left: -350px;
+	top: -10px;
 }
-.elis{
-	width: 140px;
-	height: 185px;
-	margin-top: 30px;
-	border-radius: 110px;
-}
-.arrows{
+.checklist2{
+	width: 220px;
+	color: #616161;
+	line-height: 40px;
+	list-style-image: url(../img/square.png);
+	text-align: left;
 	position: relative;
-	top:-90px; 
-	right: 30px;
+	top: -570px;
+	left: -320px;
 }
-.arrows2{
+.checkbox3{
+	width: 430px;
+	height: 750px;
 	position: relative;
-	top:-180px; 
-	left: 130px;
+	left: -350px;
+	top: -20px;
 }
-.bio{
-	font-weight: bold;
-	font-family: arial;
-	text-align: center;
-	font-size: 20px;
-	margin-left: 20px;
-}
-.level{
-	width: 40px;
-	height: 3px;
-	margin-top: 3px;
-	background: grey;
-
-}
-.level1{
-	width: 40px;
-	height: 3px;
-	background: grey;
-	margin-top: -3px;
-	margin-left: 50px;
-}
-.level2{
-	width: 40px;
-	height: 3px;
-	background: grey;
-	margin-top: -3px;
-	margin-left: 150px;
-}
-.levelblue{
-	width: 44px;
-	height: 4px;
-	background: blue;
-	margin-top: -3px;
-	margin-left: 96px;
-}
-.c{
-	margin-left: 60px;
-}
-.fly{
+.checklist3{
+	width: 300px;
+	color: #616161;
+	line-height: 40px;
+	list-style-image: url(../img/square.png);
+	text-align: left;
 	position: relative;
-	left: -260px;
-	top: 100px;
+	top: -730px;
+	left: -300px;
+}
+.mainpart2{
+	display: flex;
+	margin-left: 50PX;
+	float: top;
+	position: relative;
+	top: -680px;
+}
+.checkbox4{
+	width: 330px;
+	height: 600px;
+	position: relative;
+	left: -350px;
+	top: -200px;
+}
+.checklist4{
+	width: 220px;
+	color: #616161;
+	line-height: 40px;
+	list-style-image: url(../img/square.png);
+	text-align: left;
+	position: relative;
+	top: -760px;
+	left: -300px;
+}
+.checkbox5{
+	width: 330px;
+	height: 500px;
+	position: relative;
+	left: -1110px;
+	top: 420px;
+}
+.checklist5{
+	width: 220px;
+	color: #616161;
+	line-height: 50px;
+	list-style-image: url(../img/square.png);
+	text-align: left;
+	position: relative;
+	top: -60px;
+	left: -1060px;
 }
