--- a/css/1page.css
+++ b/css/1page.css
@@ -344,3 +344,9 @@ body{
 	margin-left: 850px;
 	margin-top: -760px;
 }
+.g{
+	font-size: 20px;
+	color: white;
+	margin-right: 30px;
+	text-decoration: none;
+}
