--- a/css/2page.css
+++ b/css/2page.css
@@ -46,7 +46,7 @@ body{
 	 margin: 0px; 
 	 padding: 20px;
 	 width: 100px;
-	 height: 100px;
+	 height: 80px;
 }
 .y:hover{
 	text-decoration: none; 
@@ -99,7 +99,7 @@ body{
 	width: 1015px;
 	height: 3150px;
 	position: relative;
-	left: 200px;
+	left: 180px;
 	top: 100px;
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
@@ -285,4 +285,10 @@ body{
 	M
 	margin-top: 50px;
 	margin-left: 600px;
+}
+.g{
+	font-size: 20px;
+	color: white;
+	margin-right: 30px;
+	text-decoration: none;
 }
