--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,71 @@
-body{
-	font-family: 'Rubik Mono One', sans-serif;
-	background: url(../img/earth.png);
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.countainer {
+    width: 100%;
+    height: 920px;
+    display: grid;
+    grid: 115px 115px 115px 115px/224px 224px 343px;
+    grid-gap: 10px;
 }
-.h3{
-	font-size: 100px;
-	color: white;
-	text-align: center;
-	margin-top: 50px;
+.item1 {
+    border: 1px solid black;
+    grid-row: 1/3;
+    background: #392b49;
+    color: white;
+    font-family: 'Poppins', sans-serif;
 }
-.h32{
-	font-size: 50px;
-	color: white;
-	margin-top: -60px;
-	text-align: center;
-	line-height: 1px;
+.item2 {
+    border: 1px solid black;
+    grid-row: 1/3;
+    text-decoration: none;
+    color: white;
+    background: #272d68;
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
 }
-.plant{
-	margin-left: 277px;
-	margin-top: 200px;
+.item3 {
+    border: 1px solid black;
+    text-decoration: none;
+    background: #5a2982;
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    font-size: 30px;
 }
-.button{
-	 text-decoration: none; 
-	 color: white; 
-	 font-size: 30px;
-	 display: flex; 
-	 position: relative;
-	 left: 230px;
-	 border: 5px solid #F2EC5C; 
-	 margin: 10px; 
-	 margin-top: 20px;
-	 width: 200px;
-	 height: 70px;
+.item4 {
+    border: 1px solid black;
+    text-decoration: none;
+    background: #532b88;
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    font-size: 30px;
 }
-.y{
-	text-decoration: none; 
-	 color: white; 
-	 font-size: 30px; 
-	 margin: 0px; 
-	 padding: 20px;
-	 width: 200px;
-	 height: 100px;
+.item5 {
+    border: 1px solid black;
+    text-decoration: none;
+    background: rgb(63, 17, 124);
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    font-size: 30px;
+    grid-row: 3/5;
 }
-.y:hover{
-	text-decoration: none; 
-	 color: #F2EC5C; 
-	 transition: 1s;
-	 font-size: 35px; 
-	 margin: -8px; 
-	 padding: 17px;
-	 width: 200px;
-	 height: 100px;
+.item6 {
+    border: 1px solid black;
+    text-decoration: none;
+    color: white;
+    background: rgb(67, 49, 82);
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    grid-row: 3/5;
+    grid-column: 2/4;
+}
+.item{
+    text-decoration: none;
+    color: white;
+    margin-top: 200px;
+    margin-left: 50px;
+    font-size: 30px;
+    font-family: Arial;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+}
+.a{
+    border-radius:5px ;
 }
